Project

General

Profile

Actions

Bug #61313

closed

Scrubs are too slow with new mClock profile changes

Added by Aishwarya Mathuria 11 months ago. Updated 7 months ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Scrubs are being reported to be very slow in multiple teuthology tests causing them to fail.
An example: https://pulpito.ceph.com/dis-2023-05-09_11:02:54-rbd-wip-dis-testing-distro-default-smithi/7268117/

This issue has been showing up after changes made in the mClock scheduler code here: https://github.com/ceph/ceph/pull/49975/files
Similar to the recovery fix in the PR mentioned, we need to reduce scrub cost as well so that they are not severely throttled.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #61403: quincy: Scrubs are too slow with new mClock profile changesResolvedAishwarya MathuriaActions
Copied to RADOS - Backport #61404: reef: Scrubs are too slow with new mClock profile changesResolvedAishwarya MathuriaActions
Actions #1

Updated by Neha Ojha 11 months ago

  • Project changed from Ceph to RADOS
Actions #2

Updated by Neha Ojha 11 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51656
Actions #3

Updated by Sridhar Seshasayee 11 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot 11 months ago

  • Copied to Backport #61403: quincy: Scrubs are too slow with new mClock profile changes added
Actions #5

Updated by Backport Bot 11 months ago

  • Copied to Backport #61404: reef: Scrubs are too slow with new mClock profile changes added
Actions #6

Updated by Backport Bot 11 months ago

  • Tags set to backport_processed
Actions #7

Updated by Sridhar Seshasayee 7 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF