osd: Change scrub cost in case of mClock scheduler

With osd_op_queue as WPQ, high costs were assigned to scrub in order to throttle it effectively.
In the case of mClock scheduler, mClock parameters are used to do the throttling and the cost should represent a realistic value.

Fixes: https://tracker.ceph.com/issues/61313
Signed-off-by: Aishwarya Mathuria <amathuri@redhat.com>